Fixed color, albedo and normal maps

--- a/Optix/CMakeLists.txt
+++ b/Optix/CMakeLists.txt
@@ -86,6 +86,6 @@ set(optix_LIBRARY "")
 # rendering
 add_subdirectory(example11_denoiseColorOnly)
 add_subdirectory(example12_denoiseSeparateChannels)
-add_subdirectory(intel_image_denoiser)
+# add_subdirectory(intel_image_denoiser)
 
 
